dev/bases/tensorflow-jupyter/deployment_env_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tensorflow-jupyter
spec:
  template:
    spec:
      containers:
        - name: tensorflow-jupyter
