dev/bases/tensorflow-jupyter/deployment_volume_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tensorflow-jupyter
spec:
  template:
    spec:
      volumes:
        - name: jupyter-notebooks
          persistentVolumeClaim:
            claimName: jupyter-notebooks
        - name: jupyter-config
          configMap:
            name: jupyter-config
      containers:
        - name: tensorflow-jupyter
          volumeMounts:
            - name: jupyter-config
              mountPath: /root/.jupyter/jupyter_notebook_config.py
              subPath: jupyter_notebook_config.py
            - name: jupyter-notebooks
              mountPath: /tf/notebooks
